# skaffold-monorepo-toy-example

./: README.md  Taskfile.yml  k3d-dev-registries.yaml  skaffold.yaml
services/fastapi-api/: Dockerfile  Taskfile.yml  devtool.json  devtools.json  format.sh  lint.sh  pyproject.toml  test.sh
services/fastapi-api/app/: alembic.ini
services/fastapi-api/app/alembic/: env.py
services/fastapi-api/app/alembic/versions/: e9fd8b7b95e3_add_items_table.py
services/fastapi-api/app/fastapi_api/: main.py
services/fastapi-api/app/fastapi_api/api/: deps.py
services/fastapi-api/app/fastapi_api/api/api_v1/: api.py
services/fastapi-api/app/fastapi_api/api/api_v1/endpoints/: hello.py  todos.py
services/fastapi-api/app/fastapi_api/core/: config.py
services/fastapi-api/app/fastapi_api/crud/: __init__.py  base.py  crud_item.py
services/fastapi-api/app/fastapi_api/db/: base.py  session.py
services/fastapi-api/app/fastapi_api/models/: todo.py
services/fastapi-api/app/fastapi_api/schemas/: __init__.py  todo.py
services/fastapi-api/app/fastapi_api/tests/: conftest.py
services/fastapi-api/app/fastapi_api/tests/crud/: test_todo.py
services/fastapi-api/app/fastapi_api/tests/utils/: todo.py
services/fastapi-api/base/: configmap.yaml  deployment.yaml  service.yaml
services/fastapi-api/k8s/base/: configmap.yaml  kustomization.yaml
services/fastapi-api/k8s/overlay/development/: kustomization.yaml  volumes.yaml
services/fastapi-api/k8s/overlay/development-sleep/: kustomization.yaml  sleep-cmd.yaml
services/fastapi-api/scripts/: export-project-def.sh
(+17 files in other folders)
