[tool.poetry]
name = "skaffold-monorepo-toy-api"
version = "0.1.0"
description = "Toy API"
authors = [""]

[tool.poetry.dev-dependencies]
black = "==22.3.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
fastapi = "^0.74.1"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.36"
alembic = "^1.7.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
